# code-security-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: eslint.security.config.mjs
examples/: VulnerableSample.java  VulnerableSample.kt
examples/csharp/: VulnerableSample.cs  sample.csproj
examples/javascript/: vulnerable_sample.js  vulnerable_sample.ts
scripts/: setup.sh
src/code_security_mcp/: __init__.py  server.py
src/code_security_mcp/adapters/: __init__.py  detekt_analyzer.py  eslint_analyzer.py  eslint_report.py  language.py  pattern_catalog.py  roslyn_analyzer.py  routing_analyzer.py  sarif.py  spotbugs_analyzer.py
src/code_security_mcp/application/: scan_code.py  suggest_secure_pattern.py
src/code_security_mcp/domain/: ports.py
src/kotlin_security_mcp/: server.py
src/kotlin_security_mcp/adapters/: detekt_analyzer.py  sarif.py
src/kotlin_security_mcp/application/: __init__.py  scan_code.py
src/kotlin_security_mcp/domain/: __init__.py  models.py  ports.py
tests/: test_csharp.py  test_javascript.py  test_routing.py  test_sarif.py  test_scan_code.py  test_secure_pattern.py
